2002-03-31  Kral Ferch  <kral_ferch@hotmail.com>

	* XmlTextWriter.cs: Impls for LookupPrefix, WriteBase64,
	and WriteCharEntity.
	
	* XmlWrite.cs:  Fixed bug where attribute namespace decl
	was pushing a scope onto the namespace manager when it shouldn't
	have been.
	
2002-03-31  Kral Ferch  <kral_ferch@hotmail.com>

	* XmlTextWriter.cs: Some tweaks for WriteAttibuteString
	in different states (no open start element, in WriteState.Content mode).
	
2002-03-29  Kral Ferch  <kral_ferch@hotmail.com>

	* XmlTextWriter.cs: XmlLang and XmlSpace properties
	and WriteWhitespace.
	
	* XmlTextWriterOpenElement.cs: scope support for XmlLang
	and XmlSpace.

2002-03-29  Kral Ferch  <kral_ferch@hotmail.com>

	* XmlTextWriter.cs: Working on Attribute methods.
	
	* XmlWriter.cs: Working on Attribute methods.

2002-03-28  Duncan Mak  <duncan@ximian.com>

	* XmlDocument.cs (CreateWhitespace):
	(CreateSignificantWhitespace): Removed extraneous call to the ToCharArray
	method.

	* XmlSignificantWhitespace.cs (Value): Removed MonoTODO attribute.

2002-03-26  Duncan Mak  <duncan@ximian.com>

	* XmlDocument.cs (CreateDocumentType): Implemented.

	* XmlNode.cs (Value): Implemented.

	* XmlProcessingInstruction.cs (InnerText): Implemented. It works just
	like XmlCharacterData.

	* XmlDeclaration.cs (CloneNode): 
	* XmlDocument.cs (CreateXmlDeclaration): Added missing constructor
	arguments.

	* XmlCharacterData.cs (InnerText): Implemented. Funny that the
	docs say it is the "The concatenated values of the node and all
	the children of the node.". I wrote some test programs and
	couldn't get any of the derived nodes to AppendChild. For now,
	InnerText == Data == Value.
	(Substring): Fixed typo.

	* XmlDeclaration.cs (XmlDeclaration): Fixed the constructor parameter signature.

	* XmlImplementation.cs (CreateDocument): Implemented.

2002-03-25  Duncan Mak  <duncan@ximian.com>

	* XmlDeclaration.cs: Rewrote the class, fixed formatting, added
	missing properties (InnerText, Value).
	